# CSWAP

./: README.md
CIFAR10/: cifar10.py
CIFAR10/ACTVs_Result/ELU_ZFP/: events.out.tfevents.1636964226.zju.8268.0  events.out.tfevents.1636964324.zju.10581.0
CIFAR10/ACTVs_Result/ELU_vDNN/: events.out.tfevents.1636962982.zju.16812.0
CIFAR10/ACTVs_Result/PReLU_vDNN/: events.out.tfevents.1636610222.zju.14359.0  events.out.tfevents.1636966615.zju.36850.0
CIFAR10/ACTVs_Result/ReLU_ZFP/: events.out.tfevents.1636965636.zju.81425.0
CIFAR10/ACTVs_Result/Tanh_ZFP/: events.out.tfevents.1636964312.zju.10191.0  events.out.tfevents.1636964349.zju.11633.0
CIFAR10/ACTVs_Result/Tanh_vDNN/: events.out.tfevents.1636600551.zju.8975.0  events.out.tfevents.1636600568.zju.9663.0
CIFAR10/ACTVs_Result/VGG_ZVC_0/: events.out.tfevents.1636373788.zju.42296.0
CIFAR10/Leaky_Relu_vDNN/: events.out.tfevents.1636600400.zju.2009.0
CIFAR10/Leaky_Relu_vDNN/Test-Acc_Test/: events.out.tfevents.1636600423.zju.2009.3
CIFAR10/Leaky_Relu_vDNN/Test-Loss_Test/: events.out.tfevents.1636600423.zju.2009.4
CIFAR10/Leaky_Relu_vDNN/Train-Acc_Train/: events.out.tfevents.1636600422.zju.2009.1
CIFAR10/Leaky_Relu_vDNN/Train-Loss_Train/: events.out.tfevents.1636600422.zju.2009.2
CIFAR10/PReLU_ZFP/: events.out.tfevents.1636965654.zju.562.0  events.out.tfevents.1636966636.zju.37298.0
CIFAR10/PReLU_ZFP/Test-Acc_Test/: events.out.tfevents.1636966666.zju.37298.3
CIFAR10/PReLU_ZFP/Test-Loss_Test/: events.out.tfevents.1636966666.zju.37298.4
CIFAR10/PReLU_ZFP/Train-Acc_Train/: events.out.tfevents.1636966665.zju.37298.1
CIFAR10/PReLU_ZFP/Train-Loss_Train/: events.out.tfevents.1636966665.zju.37298.2
CIFAR10/ReLU_vDNN/: events.out.tfevents.1636970831.zju.29290.0
CIFAR10/Sigmoid_vDNN/: events.out.tfevents.1636962681.zju.10303.0  events.out.tfevents.1636962695.zju.10325.0  events.out.tfevents.1636962713.zju.10734.0  events.out.tfevents.1636962793.zju.13808.0
CIFAR10/Sigmoid_vDNN/Test-Acc_Test/: events.out.tfevents.1636962736.zju.10734.3
CIFAR10/Sigmoid_vDNN/Test-Loss_Test/: events.out.tfevents.1636962736.zju.10734.4
CIFAR10/Sigmoid_vDNN/Train-Acc_Train/: events.out.tfevents.1636962735.zju.10734.1
CIFAR10/Tanh_vDNN/: events.out.tfevents.1636962923.zju.14222.0
CIFAR10/VGG11_ZFP_High_to_Low/: events.out.tfevents.1637286959.zju.61682.0
CIFAR10/VGG_ZFP/: events.out.tfevents.1636361225.zju.37459.0  events.out.tfevents.1636361273.zju.38364.0  events.out.tfevents.1636361286.zju.38813.0  events.out.tfevents.1636361346.zju.41081.0  events.out.tfevents.1636361394.zju.43583.0  events.out.tfevents.1636361412.zju.44050.0  events.out.tfevents.1636372727.zju.78572.0
CIFAR10/VGG_ZFP_16/: events.out.tfevents.1636376689.zju.55913.0
CIFAR10/VGG_ZFP_4/: events.out.tfevents.1636378150.zju.70972.0
CIFAR10/VGG_ZFP_8/: events.out.tfevents.1636379264.zju.60999.0
CIFAR10/models/: alexnet.py  lenet.py  mobilenet.py  resnet.py  shufflenet.py  vgg.py
CIFAR10/test/: events.out.tfevents.1636379302.zju.61462.0  events.out.tfevents.1636379324.zju.61877.0  events.out.tfevents.1636383369.zju.70277.0  events.out.tfevents.1636466069.zju.28950.0  events.out.tfevents.1636466247.zju.30125.0  events.out.tfevents.1636466470.zju.31536.0  events.out.tfevents.1636466508.zju.32088.0  events.out.tfevents.1636466645.zju.33082.0  events.out.tfevents.1636466848.zju.34365.0  events.out.tfevents.1636466874.zju.34861.0  events.out.tfevents.1636466895.zju.35334.0  events.out.tfevents.1636466963.zju.36094.0  events.out.tfevents.1636466980.zju.36549.0  events.out.tfevents.1636467012.zju.37078.0  events.out.tfevents.1636467037.zju.37581.0  events.out.tfevents.1636467119.zju.38327.0  events.out.tfevents.1636467150.zju.38842.0  events.out.tfevents.1636467235.zju.39597.0  events.out.tfevents.1636467242.zju.39646.0  events.out.tfevents.1636467277.zju.40188.0  events.out.tfevents.1636467293.zju.40644.0  events.out.tfevents.1636467333.zju.41203.0  events.out.tfevents.1636467350.zju.41728.0  events.out.tfevents.1636467412.zju.42390.0  events.out.tfevents.1636467486.zju.43105.0  events.out.tfevents.1636467529.zju.43678.0  events.out.tfevents.1636467543.zju.44122.0  events.out.tfevents.1636467585.zju.44697.0  events.out.tfevents.1636467602.zju.45156.0  events.out.tfevents.1636467772.zju.46300.0  events.out.tfevents.1636467790.zju.46762.0  events.out.tfevents.1636467998.zju.47711.0  events.out.tfevents.1636468199.zju.48986.0  events.out.tfevents.1636468264.zju.49662.0  events.out.tfevents.1636468303.zju.50558.0  events.out.tfevents.1636468429.zju.51483.0  events.out.tfevents.1636468578.zju.52435.0  events.out.tfevents.1636468720.zju.53467.0  events.out.tfevents.1636468871.zju.54618.0  events.out.tfevents.1636468898.zju.55178.0  (+10 more)
CSWAP+/: AlexNet-tinyimagenet.cpp  CMakeLists.txt  Desnet-cifar10.cpp  Execution.h  README.md  alexnet-cifar10.cpp  bert.cpp  cp-vgg16.cpp  dcgan.cpp  inception-v3-cifar100.cpp  mobilenet-cifar10.cpp  mobilenet-tinyimagenet.cpp  plain20-cifar10.cpp  plain20-tinyimagenet.cpp  resnet-cifar10.cpp  resnet-tinyimagenet.cpp  simple.c  squeezenet-cifar10.cpp  squeezenet-tinyimagenet.cpp  tinyimagenet.h  vgg16-cifar10.cpp  vgg16-tinyimagenet.cpp  vgg19-cifar10.cpp  vgg19-tinyimagenet.cpp
CSWAP+/zfp/: CMakeLists.txt  bitstream.c  bitstream.h  compression.cu  compression.cuh  constants.h  cuZFP.cu  cuZFP.h  decode.cuh  decode1.cuh  decode2.cuh  decode3.cuh  encode.cuh  encode1.cuh  encode2.cuh  encode3.cuh  pointers.cuh  shared.h  system.h  type_info.cuh  types.h  version.h  zfp.c  zfp.h
(+145 files in other folders)
